# Docowlapi

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  infer.py  md.py  pyproject.toml
DocOwl/: app.py  docowl_benchmark_evaluate.py  docowl_doclocal4k_evaluate.py  docowl_infer.py  model_worker.py
DocOwl/evaluation/: benchmarks_eval.py  due_benchmarks_eval.py  evaluator.py
DocOwl/evaluation/due_evaluator/: __init__.py  __main__.py  __version__.py  due_evaluator.py  utils.py
DocOwl/evaluation/due_evaluator/scorers/: __init__.py  accuracy_scorer.py  anls_scorer.py  fscorer.py  geval_scorer.py  group_anls.py  wtq_scorer.py
DocOwl/mplug_docowl/: __init__.py  conversation.py  mm_utils.py  processor.py  utils.py
DocOwl/mplug_docowl/model/: __init__.py  builder.py  configuration_mplug_docowl.py  convert_mplug_docowl_weight_to_hf.py  convert_mplug_docowl_weight_to_hf_v2.py  modeling_attn_mask_utils.py  modeling_llama2.py  modeling_mplug_docowl.py  utils.py  visual_encoder.py
DocOwl/mplug_docowl/train/: llama_flash_attn_monkey_patch.py  mplug_docowl_trainer.py  train_docowl.py
